--- a/learn/learn_styles.css
+++ b/learn/learn_styles.css
@@ -17,8 +17,7 @@ body {
 }
 
 main {
-    margin: 120px 25px 25px;
-    padding: 10px;
+    padding: 120px 20px 25px;
 }
 
 body.default {
